[gd_scene load_steps=4 format=3 uid="uid://dpw8x3kv2n5m4"]

[ext_resource type="Script" path="res://src/ui/PauseMenu.gd" id="1_pause"]

[sub_resource type="Shader" id="Shader_blur"]
code = "shader_type canvas_item;

uniform sampler2D screen_texture : hint_screen_texture, filter_linear_mipmap;
uniform float blur_amount : hint_range(0.0, 5.0) = 2.0;
uniform float darkness : hint_range(0.0, 1.0) = 0.4;

void fragment() {
	vec4 color = vec4(0.0);

	// Simple box blur
	int samples = 9;
	float offset = blur_amount / 512.0;

	for(int x = -1; x <= 1; x++) {
		for(int y = -1; y <= 1; y++) {
			color += texture(screen_texture, SCREEN_UV + vec2(float(x), float(y)) * offset);
		}
	}

	color /= float(samples);

	// Apply darkness overlay
	color.rgb *= (1.0 - darkness);

	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = SubResource("Shader_blur")
shader_parameter/blur_amount = 3.5
shader_parameter/darkness = 0.3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.05, 0.08, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.3, 0.5)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.6)
shadow_size = 10

[node name="PauseMenu" type="CanvasLayer" groups=["pause_menu"]]
process_mode = 3
layer = 100
script = ExtResource("1_pause")

[node name="BlurBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_blur")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 1)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -275.0
offset_right = 300.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_colors/font_shadow_color = Color(0.8, 0.5, 0.2, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 64
text = "⏸ PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(460, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 32
text = "▶ RESUME"
flat = true

[node name="SaveGameButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(460, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 24
text = "💾 SAVE GAME"
flat = true

[node name="LoadGameButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(460, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 24
text = "💾 LOAD GAME"
flat = true

[node name="ShopButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(460, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 24
text = "🛒 SHOP (P)"
flat = true

[node name="SettingsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(460, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_colors/font_pressed_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "⚙ SETTINGS"
flat = true

[node name="MainMenuButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(460, 65)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.5, 1)
theme_override_colors/font_pressed_color = Color(1, 0.7, 0.6, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.7, 0.6, 1)
theme_override_font_sizes/font_size = 24
text = "🏠 MAIN MENU"
flat = true
